Add gradle fatJar task

--- a/build.gradle
+++ b/build.gradle
@@ -23,3 +23,14 @@ run {
     if (project.hasProperty('jargs'))
         args(jargs.split(' '))
 }
+
+task(fatJar, type: Jar) {
+    manifest {
+        attributes 'Implementation-Title': rootProject.name,
+                'Implementation-Version': version,
+                'Main-Class': mainClassName
+    }
+    baseName = project.name + '-all'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
