Add jacoco test reporting (for code coverage)

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ version '1.0-SNAPSHOT'
 apply plugin: 'java'
 apply plugin: 'application'
 apply plugin: 'antlr'
+apply plugin: 'jacoco'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -55,3 +56,11 @@ generateGrammarSource {
     maxHeapSize = '64m'
     arguments += ['-visitor', '-long-messages']
 }
+
+// Jacoco test report - http://www.jworks.nl/2013/06/03/jacoco-code-coverage-with-gradle/
+jacocoTestReport {
+    group = "Reporting"
+    description = "Generate Jacoco coverage reports after running tests."
+    additionalSourceDirs = files(sourceSets.main.allJava.srcDirs)
+}
+test.finalizedBy jacocoTestReport
