--- a/src/main/resources/simplelogger.properties
+++ b/src/main/resources/simplelogger.properties
@@ -1,4 +1,5 @@
 # SLF4J's SimpleLogger configuration file
 org.slf4j.simpleLogger.showDateTime=true
 org.slf4j.simpleLogger.dateTimeFormat=yyyy-MM-dd HH:mm:ss.SSS
-org.slf4j.simpleLogger.defaultLogLevel=TRACE
+# To set org.slf4j.simpleLogger.defaultLogLevel see CsarContext#logLevel
+# It can be overridden during runtime by CLI
