--- a/csar-cli/build.gradle
+++ b/csar-cli/build.gradle
@@ -13,31 +13,39 @@ dependencies {
 }
 
 run {
-    // TODO run build before this
+    dependsOn = [':plugins:assemblePlugins']
+
     // Set java program arguments from gradle run arguments
     if (project.hasProperty('jargs'))
         args(jargs.split(' '))
 }
 
-task uberjar(type: Jar, dependsOn: ['compileJava']) {
+task distJar(type: Jar, dependsOn: ['compileJava']) {
+    group = 'distribution'
+    destinationDir = distsDir
     zip64 true
+
+    // Content
+    manifest {
+        attributes 'Main-Class': mainClassName
+    }
+
     from configurations.runtime.asFileTree.files.collect {
         exclude "META-INF/*.SF"
         exclude "META-INF/*.DSA"
         exclude "META-INF/*.RSA"
         zipTree(it)
     }
+
     from files(sourceSets.main.output.classesDir)
     from files(sourceSets.main.resources)
-    manifest {
-        attributes 'Main-Class': mainClassName
-    }
 
-    baseName = "${project.name}-uber"
-    classifier = "uberjar"
+    // Output Name
+    baseName = "${project.name}"
+    classifier = "all"
 }
 
 clean.doLast {
     // Delete plugins directory
-    new File(pluginsDir).deleteDir()
+    file(pluginsDir).deleteDir()
 }
