--- a/plugins/build.gradle
+++ b/plugins/build.gradle
@@ -8,25 +8,30 @@ subprojects {
         }
     }
 
-    task plugin(type: Jar) {
+    task distZip(type: Jar) {
+        group = 'distribution'
         baseName = "plugin-${pluginId}"
+        extension('zip')
+
         into('classes') {
             with jar
         }
-        // the following breaks the output jar because it contains 2 definitions of the same interface (in the api jar)
+
+        // the following breaks the jar because it contains 2 definitions of the CsarPlugin interface (due to csar-api)
 //        into('lib') {
 //            from configurations.compile
 //        }
-        extension('zip')
     }
 
     task assemblePlugin(type: Copy) {
-        from plugin
+        group = 'distribution'
+        from distZip
         into pluginsDir
     }
 }
 
 task assemblePlugins(type: Copy) {
+    group = 'distribution'
     dependsOn subprojects.assemblePlugin
 }
 
