--- a/csar-cli/build.gradle
+++ b/csar-cli/build.gradle
@@ -13,7 +13,58 @@ dependencies {
 }
 
 run {
+    dependsOn.add ':plugins:jar'
+
     // Set java program arguments from gradle run arguments
     if (project.hasProperty('jargs'))
         args(jargs.split(' '))
+}
+
+task distJar(type: Jar, dependsOn: ['compileJava']) {
+    group = 'distribution'
+    destinationDir = distsDir
+    zip64 true
+
+    // Content
+    manifest {
+        attributes 'Main-Class': mainClassName
+    }
+
+    from configurations.runtime.asFileTree.files.collect {
+        exclude "META-INF/*.SF"
+        exclude "META-INF/*.DSA"
+        exclude "META-INF/*.RSA"
+        zipTree(it)
+    }
+
+    from files(sourceSets.main.output.getClassesDirs())
+    from files(sourceSets.main.resources)
+
+    // Output Name
+    baseName = "${project.name}"
+    classifier = "all"
+}
+
+build.finalizedBy distJar
+
+distJar.doLast {
+    project.project(':plugins').jar // include plugin jars in same directory
+}
+
+distZip {
+    dependsOn.add ':plugins:jar'
+
+    into(project.name + '/lib/') { // include plugin jars
+        from project.project(':plugins').buildDir.toString() + '/libs/'
+        include '*.jar'
+    }
+}
+
+distTar {
+    dependsOn.add ':plugins:jar'
+
+    into(project.name + '/lib/') { // include plugin jars
+        from project.project(':plugins').buildDir.toString() + '/libs/'
+        include '*.jar'
+    }
 }
