Update comment on log level

--- a/csar-cli/src/main/resources/simplelogger.properties
+++ b/csar-cli/src/main/resources/simplelogger.properties
@@ -2,4 +2,4 @@
 org.slf4j.simpleLogger.showDateTime=true
 org.slf4j.simpleLogger.dateTimeFormat=yyyy-MM-dd HH:mm:ss.SSS
 # To set org.slf4j.simpleLogger.defaultLogLevel see CsarContext#logLevel
-# It can be overridden during runtime by CLI
+# The value you set there can be overridden during runtime by CLI
