Update logger config (outputs only class names)

--- a/csar-cli/src/main/resources/simplelogger.properties
+++ b/csar-cli/src/main/resources/simplelogger.properties
@@ -1,5 +1,8 @@
 # SLF4J's SimpleLogger configuration file
+
 org.slf4j.simpleLogger.showDateTime=true
 org.slf4j.simpleLogger.dateTimeFormat=yyyy-MM-dd HH:mm:ss.SSS
+org.slf4j.simpleLogger.showShortLogName=true
+
 # To set org.slf4j.simpleLogger.defaultLogLevel see CsarContext#logLevel
-# The value you set there can be overridden during runtime by CLI
+# Note: The value you set there can be overridden during runtime by a CLI argument
