--- a/plugins/csar-java/build.gradle
+++ b/plugins/csar-java/build.gradle
@@ -6,6 +6,8 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
     // https://mvnrepository.com/artifact/org.antlr/antlr4-runtime
     compile group: 'org.antlr', name: 'antlr4-runtime', version: '4.7'
+    // https://mvnrepository.com/artifact/de.javakaffee/kryo-serializers
+    compile group: 'de.javakaffee', name: 'kryo-serializers', version: '0.42'
     // https://mvnrepository.com/artifact/org.antlr/antlr4
     antlr group: 'org.antlr', name: 'antlr4', version: '4.7'
     // https://mvnrepository.com/artifact/org.mockito/mockito-core
